fixed banner font size on small screens

--- a/src/Assets/scss/buttons.scss
+++ b/src/Assets/scss/buttons.scss
@@ -31,7 +31,7 @@
     text-align: center;
     text-transform: uppercase;
     font-family: $bodyFont;
-    color: $white !important;
+    //color: $white !important;
     font-weight: 700;
     letter-spacing: 0.25em;
   }
@@ -43,10 +43,11 @@
   background-color: $bgColor;
   border-radius: $radius;
   color: $white;
-  height: 48px;
+  min-height: 48px;
   width: 344px;
   padding: 16px;
   margin-bottom: 16px;
+  margin-right: 16px;
   font-size: 14px;
   // text-transform: uppercase;
 }
